wrapping issues resolved

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,6 +36,9 @@
   // }
 }
 
+.actions .popout {
+  white-space: nowrap;
+}
 
 
 .multiselect__tag-icon:focus,
